Details
-
Type:
Bug
-
Status: Closed
-
Priority:
Not Evaluated
-
Resolution: Done
-
Affects Version/s: 4.8.2
-
Fix Version/s: 5.0.0
-
Component/s: Core: Other
-
Labels:
-
Environment:Windows 7 + Qt4.8.2
-
Commits:I8e0e071d6c682d9192a8c6bb2f282510e21b3c48
Description
QString dString( "+100,000" );
int dInt = locale.toInt( dString, &isOk );
qDebug() << "dInt is " << dInt;
--> Error: QLocale::toInt(..) returns 0 if the QString contains a positive sign '+' and a separator.
The attached example application demonstrates the use case.